--- a/des.css
+++ b/des.css
@@ -2571,3 +2571,21 @@ background:#3d3b53;
     margin-left: auto;
     margin-right: auto;
 }
+
+.jobselect{
+    margin-top: 4%;
+    color: gray !important;
+}
+
+.profileall img{
+    border: 1px solid rgb(148, 148, 148);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+}
+.profileall span{
+    font-size: 2.1rem;
+    font-weight: 600;
+    margin-left: 10%;
+}
